--- a/vitareact/src/components/css/banner.module.css
+++ b/vitareact/src/components/css/banner.module.css
@@ -36,17 +36,18 @@
 	padding-right: 2rem;
 	margin-right: 1rem;
 	padding-top: 0.5rem;
-	background-color: rgba(6, 26, 49, 0.61);
+	background-color: rgba(51, 51, 51, 0.5);
 	padding-bottom: 0.5rem;
 }
 
 .banner_btn:hover {
-	color: #fff;
-	background-color: var(--vita-pink);
+	color: black;
+	background-color: var(--color-3);
 	transition: all 0.2s;
 }
 
-.banner_btn:active, .banner_btn:focus {
+.banner_btn:active,
+.banner_btn:focus {
 	outline: none;
 }
 
@@ -55,7 +56,7 @@
 	background-image: linear-gradient(
 		180deg,
 		transparent,
-		rgba(15, 41, 71, 0.61),
+		rgba(37, 37, 37, 0.61),
 		#111
 	);
 }
