--- a/vitareact/src/components/css/commentStyles.module.css
+++ b/vitareact/src/components/css/commentStyles.module.css
@@ -1,39 +1,44 @@
-
 .commentItem {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+	margin-top: 7px;
+	border: 1.5px solid;
+	border-color: var(--color-2);
+	border-left: 8px solid var(--color-1);
+	border-top-left-radius: 8px;
+	border-bottom-left-radius: 8px;
 }
 
 .avatarBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 5px;
 }
 
 .avatar {
-    height: 40px;
-    width: 40px;
-    border-radius: 20px;
-    padding-top: 10px;
-    font-size: 18px;
-    background-color: var(--vita-bright-blue);
-    color: var(--vita-dark-blue);
-    font-weight: bold;
-    text-align: center;
+	height: 40px;
+	width: 40px;
+	border-radius: 20px;
+	padding-top: 10px;
+	font-size: 18px;
+	background-color: var(--vita-bright-blue);
+	color: var(--vita-dark-blue);
+	font-weight: bold;
+	text-align: center;
 }
 
 .restDetailsBox {
-    padding-left: 5px;
-    width: 95%;
-    display: flex;
-    flex-direction: column;
+	padding-left: 5px;
+	width: 95%;
+	display: flex;
+	flex-direction: column;
 }
 
 .restDetailsBox p {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
