--- a/vitareact/src/components/css/header.module.css
+++ b/vitareact/src/components/css/header.module.css
@@ -1,12 +1,19 @@
 .header {
 	position: fixed;
+	top: 0;
 	width: 100%;
 	height: 60px;
-	padding: 15px 20px 0 10px;
+	padding: 20px;
 	display: flex;
 	justify-content: space-between;
-	background-color: var(--vita-dark-blue);
+	/* background-color: transparent; */
 	z-index: 20;
+	transition-timing-function: ease-in;
+	transition: all 0.5s;
+}
+
+.header_black {
+	background-color: black;
 }
 
 .mainContent {
@@ -22,9 +29,9 @@
 }
 
 .openbtn {
-	background: linear-gradient(to right, var(--vita-bright-blue), white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	background: linear-gradient(to right, var(--color-2), white);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 	font-size: 25px;
 }
 
@@ -36,7 +43,7 @@
 	z-index: 1;
 	top: 0;
 	left: 0;
-	background-color: var(--vita-dark-blue);
+	/* background-color: var(--vita-dark-blue); */
 	overflow-x: hidden;
 	transition: 0.4s;
 }
@@ -52,9 +59,9 @@
 	padding: 10px 0 10px 15px;
 	background-color: var(--vita-dark-blue);
 	text-align: left;
-	background: linear-gradient(to right, var(--vita-bright-blue), white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	background: linear-gradient(to right, var(--color-3), white);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 	font-size: 18px;
 	font-weight: bold;
 	line-height: 2;
@@ -75,9 +82,9 @@
 	top: 0;
 	width: 40px;
 	text-align: center;
-	background: linear-gradient(to right, var(--vita-bright-blue), white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	background: linear-gradient(to right, var(--color-2), white);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 @media (min-width: 900px) {
