--- a/vitareact/src/components/css/homePage.css
+++ b/vitareact/src/components/css/homePage.css
@@ -1,135 +1,135 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
 
-body, html {
-    height: 100%;
-    margin: 0;
+body,
+html {
+	height: 100%;
+	margin: 0;
 }
 
 .homeHero {
-    font-family: 'Raleway', serif;
-    letter-spacing: 0.09em;
-    word-spacing: 0.5em;
-    background-image: url('../../images/back3edit4.png');
-    height: 100%; 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    overflow: hidden;
+	font-family: 'Raleway', serif;
+	letter-spacing: 0.09em;
+	word-spacing: 0.5em;
+	background-image: url('../../images/back3edit4.png');
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	overflow: hidden;
 }
 
 .homePageNav {
-    width: 95%;
-    height: 15%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	width: 95%;
+	height: 15%;
+	margin: auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .vitaLogo {
-    width: 130px;
-    cursor: pointer;
+	width: 130px;
+	cursor: pointer;
 }
 
 .homeBtn {
-    color: #fbfcfd;
-    padding: 10px 25px;
-    background: transparent;
-    border: 2px solid #fff;
-    border-radius: 25px;
-    outline: none;
-    transition: all 0.3s ease;
-    cursor: pointer;
+	color: var(--color-3);
+	padding: 10px 25px;
+	background: transparent;
+	border: 2px solid var(--color-3);
+	border-radius: 25px;
+	outline: none;
+	transition: all 0.3s ease;
+	cursor: pointer;
 }
 
-.homeBtn:focus, .homeBtn:active {
-    outline: none;
+.homeBtn:focus,
+.homeBtn:active {
+	outline: none;
 }
 
 .homeContent {
-    width: 80%;
-    margin: auto;
-    color: #fbfcfd;
-    position: absolute;
-    top: 42%;
-    left: 8%;
-    transform: translate(3%, -78%);
-    z-index: 2;
+	width: 80%;
+	margin: auto;
+	color: #fbfcfd;
+	position: absolute;
+	top: 42%;
+	left: 8%;
+	transform: translate(3%, -78%);
+	z-index: 2;
 }
 
 .homeMessage {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 30px;
+	margin-bottom: 20px;
+	text-align: center;
+	font-size: 30px;
 }
 
 .bottomMessage {
-    margin-top: 20px;
-    margin-bottom: 0;
-
+	margin-top: 20px;
+	margin-bottom: 0;
 }
 
 .homeHeading {
-    padding-left: 0;
-    font-size: 80px;
-    margin: 0;
-    line-height: 80px;
-    text-align: center;
+	padding-left: 0;
+	font-size: 80px;
+	margin: 0;
+	line-height: 80px;
+	text-align: center;
 }
 
 .mainSignup {
-    font-size: 35px;
-    margin-top: 50px;
-    position: absolute;
-    left: 50%;
-    bottom: 5%;
-    transform: translateX(-43%);
-    border-radius: 40px;
-    border: 3px solid;
-    letter-spacing: -0.04em;
+	font-size: 35px;
+	margin-top: 50px;
+	position: absolute;
+	left: 50%;
+	bottom: 5%;
+	transform: translateX(-43%);
+	border-radius: 40px;
+	border: 3px solid;
+	letter-spacing: -0.04em;
 }
 
-
 @media only screen and (max-width: 900px) {
-    .homeHeading {
-        font-size: 60px;
-        line-height: 70px;
-    }
-    .homeMessage {
-        font-size: 25px;
-    }
-    .mainSignup {
-        font-size: 35px;
-        margin-top: 20px;
-        border-radius: 40px;
-        border: 4px solid;
-    }
-    .vitaLogo {
-        width: 100px;
-    }
+	.homeHeading {
+		font-size: 60px;
+		line-height: 70px;
+	}
+	.homeMessage {
+		font-size: 25px;
+	}
+	.mainSignup {
+		font-size: 35px;
+		margin-top: 20px;
+		border-radius: 40px;
+		border: 4px solid;
+	}
+	.vitaLogo {
+		width: 100px;
+	}
 }
 
 @media only screen and (max-width: 600px) {
-    .homeHeading {
-        font-size: 45px;
-        line-height: 60px;
-    }
-    .homeMessage {
-        font-size: 18px;
-    }
-    .mainSignup {
-        font-size: 28px;
-        margin-top: 20px;
-        border-radius: 40px;
-        border: 3px solid;
-    }
-    .content {
-        top: 45%
-    }
+	.homeHeading {
+		font-size: 45px;
+		line-height: 60px;
+	}
+	.homeMessage {
+		font-size: 18px;
+	}
+	.mainSignup {
+		font-size: 28px;
+		margin-top: 20px;
+		border-radius: 40px;
+		border: 3px solid;
+	}
+	.content {
+		top: 45%;
+	}
 }
