--- a/vitareact/src/components/css/row.module.css
+++ b/vitareact/src/components/css/row.module.css
@@ -5,9 +5,9 @@
 .row > h2 {
 	width: 250px;
 	padding-left: 5px;
-	background: linear-gradient(to right, var(--vita-bright-blue), white);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	background: linear-gradient(to right, var(--color-2), white);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 .row_posters {
 	display: flex;
