--- a/vitareact/src/components/css/subscription.module.css
+++ b/vitareact/src/components/css/subscription.module.css
@@ -1,38 +1,45 @@
-
 .plansContainer {
-    background-color: orange;
-    width: 97vw;
-    margin: 100px auto;
-    border-radius: 6px;
-    background-color: var(--vita-light-blue);
-    color: white;
-    padding: 15px 0 30px 0;
+	background-color: orange;
+	width: 97vw;
+	margin: 100px auto;
+	border-radius: 6px;
+	background-color: transparent;
+	color: white;
+	padding: 15px 0 30px 0;
 }
 
 .plansContainer h1 {
-    margin-bottom: 50px;
-    font-weight: bold;
+	margin-bottom: 50px;
+	font-weight: bold;
 }
 
 .allPlans {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-wrap: wrap;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-content: center;
+	flex-wrap: wrap;
 }
 
 .plan {
-    padding: 10px;
-    text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	padding: 10px;
+	text-align: center;
+	border: 5px solid;
+	border-color: var(--color-1);
+	border-radius: 6px;
+	min-width: 250px;
+	min-height: 200px;
 }
 
 @media screen and (max-width: 600px) {
-    .allPlans {
-        flex-direction: column;
-    }
-    .plan {
-        margin: 10px;
-        width: 100%;
-    }
+	.allPlans {
+		flex-direction: column;
+	}
+	.plan {
+		margin: 10px;
+		width: 100%;
+	}
 }
