--- a/vitareact/src/components/css/videoplayer.css
+++ b/vitareact/src/components/css/videoplayer.css
@@ -7,7 +7,7 @@
 	display: inline-flex;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.835);
 	overflow: hidden;
-	background-color: var(--vita-dark-blue);
+	background-color: transparent;
 }
 .videoPlayer video {
 	width: 70%;
@@ -54,7 +54,7 @@
 	left: 0;
 	width: 0;
 	margin: auto;
-	background: linear-gradient(to right, #fa761d, #ff1e74);
+	background: linear-gradient(to right, white, #ff1e74);
 	transition: all ease var(--easing);
 }
 
@@ -69,7 +69,7 @@
 	align-items: center;
 	width: 100%;
 	padding: 0 10px;
-	:border-box ;
+	/* :border-box ; */
 }
 .control-btn {
 	font-size: 25px;
@@ -180,7 +180,7 @@
 	height: 100%;
 	width: 50%;
 	border-radius: 2px;
-	background: linear-gradient(to right, #fa761d, #ff1e74);
+	background: linear-gradient(to right, white, #ff1e74);
 	transition: all ease var(--easing);
 }
 
@@ -263,7 +263,7 @@
 }
 
 .like {
-	color: var(--vita-light-pink);
+	color: var(--color-2);
 }
 .dislike {
 	color: var(--vita-light-orange);
