--- a/vitareact/src/components/css/forms.module.css
+++ b/vitareact/src/components/css/forms.module.css
@@ -1,8 +1,9 @@
 .formBG {
-	/* padding: 0;
+	padding: 0;
 	margin: 0;
 	width: 100vw;
-	height: 100vh; */
+	height: 75vh;
+	/* background-color: white; */
 	/* background: linear-gradient(to bottom right, var(--vita-dark-blue), var(--vita-pink)); */
 }
 
