--- a/vitareact/src/components/css/forms.module.css
+++ b/vitareact/src/components/css/forms.module.css
@@ -255,7 +255,7 @@
 	background: transparent;
 	border: 1px solid;
 	border-left: 5px solid;
-	color: var(--vita-dark-blue);
+	color: var(--color-1);
 	background-color: #d3d3d318;
 }
 
@@ -268,6 +268,47 @@
 	outline: 0;
 	color: var(--vita-dark-blue);
 	color: white;
+}
+
+.videoCheckboxContainer {
+	width: 85%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: auto;
+	border: 1px solid;
+	border-left: 5px solid;
+	padding: 10px;
+	background: transparent;
+	color: var(--color-1);
+	background-color: #d3d3d318;
+	border-radius: 6px;
+}
+
+.videoCheckboxContainer > p {
+	padding: 0;
+	margin: 0;
+}
+
+.checkboxInputs {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.checkInput {
+	width: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.checkInput > label { 
+	margin: 0;
+	padding: 0;
+	margin-top: 2px;
+	padding-left: 5px;
 }
 
 .uploadProgress {
