--- a/vitareact/src/components/css/grid.css
+++ b/vitareact/src/components/css/grid.css
@@ -1,21 +1,41 @@
 .grid-container {
 	display: grid;
-	width: 70vw;
-	margin: auto;
-	/* background-color: aliceblue; */
-	grid-gap: 10px;
-	grid-template-columns: 1fr 1fr 1fr;
-	/* grid-template-rows: 1fr 1fr; */
-	align-items: flex-end;
+	/* position: relative; */
+	width: 100%;
+	/* align-items: center; */
+	/* background-color: blue; */
+	grid-gap: 1em;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1.5fr;
+	/* align-items: flex-end; */
 }
 
 .grid-item {
-	max-width: 100%;
+	width: 100%;
+	height: 100%;
 }
-
-@media (max-width: 640px) {
+.widget-bar,
+.VideoReports {
+	grid-column-start: 1;
+	grid-column-end: 3;
+}
+.widget-pie,
+.CommentReports {
+	grid-column-start: 3;
+	grid-column-end: 5;
+}
+@media only screen and (max-width: 550px) {
 	.grid-container {
-		grid-template-columns: 250px;
-		margin: auto;
+		grid-template-columns: 1fr;
+	}
+	.widget-bar,
+	.VideoReports {
+		grid-column-start: 1;
+		grid-column-end: 2;
+	}
+	.widget-pie,
+	.CommentReports {
+		grid-column-start: 1;
+		grid-column-end: 2;
 	}
 }
