--- a/vitareact/src/components/css/widget.module.css
+++ b/vitareact/src/components/css/widget.module.css
@@ -1,16 +1,16 @@
 .widgetWrap {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	align-items: center;
+	justify-content: flex-start;
 	background: transparent;
 	align-items: center;
 	text-align: center;
 	border: 4px solid;
 	border-color: var(--color-1);
 	border-radius: 8px;
-	min-width: 200px;
-	min-height: 175px;
-	margin-top: 15px;
+	width: 100%;
+	height: 100%;
 }
 
 .widgetTitle {
@@ -34,6 +34,7 @@
 }
 .description {
 	text-align: center;
+	min-height: 20px;
 }
 
 .widgetValue {
