--- a/vitareact/src/components/css/grid.css
+++ b/vitareact/src/components/css/grid.css
@@ -24,6 +24,12 @@
 	grid-column-start: 3;
 	grid-column-end: 5;
 }
+
+.category_vs_videos_graph {
+	grid-column-start: 1;
+	grid-column-end: 5;
+}
+
 @media only screen and (max-width: 550px) {
 	.grid-container {
 		grid-template-columns: 1fr;
@@ -35,6 +41,10 @@
 	}
 	.widget-pie,
 	.CommentReports {
+		grid-column-start: 1;
+		grid-column-end: 2;
+	}
+	.category_vs_videos_graph {
 		grid-column-start: 1;
 		grid-column-end: 2;
 	}
