--- a/vitareact/src/components/css/gridResults.css
+++ b/vitareact/src/components/css/gridResults.css
@@ -36,7 +36,7 @@
 	background: linear-gradient(
 		to bottom,
 		#061a3118,
-		#6a097d
+		var(--color-1)
 	);
 	position: absolute;
 	transition: all 0.3s ease;
