--- a/vitareact/src/components/css/banner.module.css
+++ b/vitareact/src/components/css/banner.module.css
@@ -21,13 +21,13 @@
 	width: 45rem;
 	line-height: 1.3;
 	padding-top: 1rem;
-	font-size: 0.8rem;
+	font-size: 1.2rem;
 	max-width: 360px;
 	height: 80px;
 }
 .banner_btn {
 	cursor: pointer;
-	color: #fff;
+	color: var(--color-2);
 	outline: none;
 	border: none;
 	font-weight: 700;
@@ -36,13 +36,13 @@
 	padding-right: 2rem;
 	margin-right: 1rem;
 	padding-top: 0.5rem;
-	background-color: rgba(51, 51, 51, 0.5);
+	background-color: rgba(63, 104, 101, 0.5);
 	padding-bottom: 0.5rem;
 }
 
 .banner_btn:hover {
-	color: black;
-	background-color: var(--color-3);
+	color: white;
+	background-color: var(--color-1);
 	transition: all 0.2s;
 }
 
