--- a/vitareact/src/components/css/header.module.css
+++ b/vitareact/src/components/css/header.module.css
@@ -13,7 +13,7 @@
 }
 
 .header_black {
-	background-color: black;
+	background-color: var(--bg-color);
 }
 
 .mainContent {
@@ -29,7 +29,7 @@
 }
 
 .openbtn {
-	background: linear-gradient(to right, var(--color-2), white);
+	background: linear-gradient(to right, var(--color-1), var(--color-1));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	font-size: 25px;
@@ -59,7 +59,7 @@
 	padding: 10px 0 10px 15px;
 	background-color: var(--vita-dark-blue);
 	text-align: left;
-	background: linear-gradient(to right, var(--color-3), white);
+	background: linear-gradient(to right, var(--color-1), var(--color-2));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	font-size: 18px;
@@ -82,7 +82,7 @@
 	top: 0;
 	width: 40px;
 	text-align: center;
-	background: linear-gradient(to right, var(--color-2), white);
+	background: linear-gradient(to right, var(--color-1), var(--color-2));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
@@ -126,6 +126,6 @@
 }
 @media (max-width: 900px) {
 	.navbar {
-		background-color: black;
+		background-color: var(--bg-color);
 	}
 }
