--- a/vitareact/src/components/css/profile.module.css
+++ b/vitareact/src/components/css/profile.module.css
@@ -10,7 +10,7 @@
 
 .profContainer h1,
 .profContainer p {
-	background: linear-gradient(to right, var(--color-2), white);
+	background: linear-gradient(to right, var(--color-1), white);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
@@ -25,7 +25,18 @@
 	width: 97%;
 	margin: 30px auto 0 auto;
 }
+
+.watchlistName {
+	width: 500px;
+	background: linear-gradient(to right, var(--color-1), white);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
 .watchlistContainer > h2 {
+	background: linear-gradient(to right, var(--color-1), var(--color-2));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 	text-align: center;
 	padding: 10px 0 20px 0;
 }
@@ -33,5 +44,8 @@
 @media screen and (max-width: 600px) {
 	.profContainer {
 		width: 80%;
+	}
+	.watchlistName {
+		width: 100%;
 	}
 }
