--- a/vitareact/src/components/css/row.module.css
+++ b/vitareact/src/components/css/row.module.css
@@ -5,7 +5,7 @@
 .row > h2 {
 	width: 250px;
 	padding-left: 5px;
-	background: linear-gradient(to right, var(--color-2), white);
+	background: linear-gradient(to right, var(--color-1), var(--color-3));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
