--- a/vitareact/src/components/css/videoplayer.css
+++ b/vitareact/src/components/css/videoplayer.css
@@ -20,7 +20,7 @@
 	left: 0;
 	right: 0;
 	margin: auto;
-	background-color: rgba(26, 29, 26, 0.5);
+	background-color: var(--bg-color);
 	display: flex;
 	flex-direction: column;
 	z-index: 10;
@@ -54,7 +54,7 @@
 	left: 0;
 	width: 0;
 	margin: auto;
-	background: linear-gradient(to right, white, #ff1e74);
+	background: linear-gradient(to right, var(--color-1), var(--color-2));
 	transition: all ease var(--easing);
 }
 
@@ -88,7 +88,7 @@
 	border: none;
 }
 .control-btn:hover {
-	color: #ff1e74;
+	color: var(--color-1);
 }
 .time-control {
 	display: flex;
@@ -109,10 +109,10 @@
 	color: var(--vita-light-grey);
 }
 .start-time:hover {
-	color: #fa761d;
+	color: var(--color-2);
 }
 .end-time:hover {
-	color: #ff1e74;
+	color: var(--color-1);
 }
 .time-slash {
 	margin: 0 5px;
@@ -144,10 +144,10 @@
 .playback-value {
 	padding: 10px 0;
 	font-size: 16px;
-	color: #ff1e74;
+	color: var(--color-2);
 }
 .playback-btn i:hover {
-	color: #ff1e74;
+	color: var(--color-2);
 }
 .playback-meter {
 	width: 40px;
@@ -180,7 +180,7 @@
 	height: 100%;
 	width: 50%;
 	border-radius: 2px;
-	background: linear-gradient(to right, white, #ff1e74);
+	background: linear-gradient(to right, var(--color-1), var(--color-2));
 	transition: all ease var(--easing);
 }
 
