--- a/vitareact/src/components/css/widget.module.css
+++ b/vitareact/src/components/css/widget.module.css
@@ -14,7 +14,7 @@
 }
 
 .widgetTitle {
-	border-bottom: 1px solid #665151;
+	border-bottom: 1px solid var(--color-3);
 	text-align: left;
 	text-transform: uppercase;
 	font-size: 13px;
